--- a/style.css
+++ b/style.css
@@ -3,10 +3,38 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  background-color: rgb(229, 229, 229);
+  padding:0;
+  margin:0
+}
 nav {
-  height: 40px;
+  height: 100px;
   width: 100vw;
+  background-color: rgb(0, 255, 238);
+  display: flex;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
 
+h1 {
+  margin: 0 0 0 20px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#addBookButton {
+  height: 50px;
+  width: 150px;
+  background-color: pink;
+  border: 0;
+  border-radius: 4px;
+  margin: 30px;
+  font-size: 1.2rem;
 }
 
 form {
@@ -17,12 +45,29 @@ form {
   height: 100%;
 }
 
+#submit {
+  height: 40px;
+  width: 90px;
+  background-color: rgb(0, 255, 119);
+  font-size: 1.1rem;
+  border: 0;
+  border-radius: 4px;
+}
+
+.addBookContainer {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
 .formContainer {
   display:none;
   z-index: 10;
   width: 300px;
   height: 400px;
   background-color: azure;
+  border-radius: 7px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 input:not(#readStatus) {
@@ -42,6 +87,54 @@ label {
 .active {
   display: block !important;
   animation: createBox .25s;
+  position:absolute;
+  top:200px;
+}
+
+.books {
+  display: flex;
+  justify-content: left;
+  width: 100vw;
+}
+
+.bookItem {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  height: 300px;
+  width: 200px;
+  margin: 20px;
+}
+
+.bookRead {
+  background-color: greenyellow;
+}
+
+.bookNotRead {
+  background-color: rgb(255, 100, 100);
+}
+
+.bookRead , .bookNotRead {
+  border: none;
+  height: 35px;
+  width: 80px;
+  border-radius: 5px;
+}
+
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
 }
 
 @keyframes createBox {
